force-app/main/default/objects/Point__c/Point__c.object-meta.xml
<CustomObject>
    <label>ポイント集計</label>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>ポイント集計</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>