force-app/main/default/objects/Point__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ポイント付与先(得意先)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PropertyPoint1</relationshipName>
    <type>Lookup</type>
</CustomField>