force-app/main/default/objects/Point__c/fields/AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner__c</fullName>
    <formula>Account__r.CW_OwnerId__r.LastName  &amp; &quot; &quot;&amp;  Account__r.CW_OwnerId__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先所有者</label>
    <type>Text</type>
</CustomField>