force-app/main/default/objects/Point__c/fields/AccountPointFrom__c.field-meta.xml
<CustomField>
    <fullName>AccountPointFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ポイント付与元(得意先)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountPointFrom</relationshipName>
    <type>Lookup</type>
</CustomField>