force-app/main/default/objects/Point__c/fields/ContactPointFrom__c.field-meta.xml
<CustomField>
    <fullName>ContactPointFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ポイント付与元(得意先担当者)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ContactPointFrom</relationshipName>
    <type>Lookup</type>
</CustomField>