force-app/main/default/objects/Point__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件名</label>
    <referenceTo>property__c</referenceTo>
    <relationshipLabel>ポイント集計</relationshipLabel>
    <relationshipName>PropertyPoint</relationshipName>
    <type>Lookup</type>
</CustomField>