force-app/main/default/objects/Point__c/fields/TargetCategory__c.field-meta.xml
<CustomField>
    <fullName>TargetCategory__c</fullName>
    <formula>TEXT( Account__r.CS_sennryakukubun__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>戦略区分_CS</label>
    <type>Text</type>
</CustomField>