force-app/main/default/objects/Point__c/fields/TargetPoint__c.field-meta.xml
<CustomField>
    <fullName>TargetPoint__c</fullName>
    <label>目標ポイント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>