force-app/main/default/objects/Point__c/fields/UpdUser__c.field-meta.xml
<CustomField>
    <fullName>UpdUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PointUser</relationshipName>
    <type>Lookup</type>
</CustomField>