force-app/main/default/objects/Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>AccountPointFrom__c</columns>
    <columns>ContactPointFrom__c</columns>
    <columns>Account__c</columns>
    <columns>Point__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>